--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "KoaMongoBoilerPlate",
+  "name": "spending",
   "keywords": [
     "koa",
     "koa2",
@@ -25,6 +25,7 @@
     "koa-mongoose": "^2.0.0",
     "koa-respond": "^2.1.0",
     "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
     "mongodb": "^3.2.3",
     "mongoose": "^5.4.14"
   },
