--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index",
-    "start": "cross-env NODE_ENV=production nodemon index"
-  },
+  //   "start": "cross-env NODE_ENV=production nodemon index"
+  // },
+  "start": "nodemon index",
   "dependencies": {
     "@koa/cors": "^2.2.3",
     "bcryptjs": "^2.4.3",
