--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index",
-  "start": "nodemon index"
+  "start": "node index"
   },
   "dependencies": {
     "@koa/cors": "^2.2.3",
