--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "start": "node index.js",
     "build": "ng build",
-    "heroku-postbuild": "ng build --prod" // this will be run on Heroku
+    "heroku-postbuild": "ng build --prod"
   },
   "dependencies": {
     "@koa/cors": "^2.2.3",
