--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "author": "Bill Hsiao",
   "license": "MIT",
   "version": "1.2.2",
+  "engines": {
+    "node": "9.2.0"
+  },
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
