--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
-    "@babel/register": "^7.4.0",
-    "nodemon": "^1.19.0"
+    "@babel/register": "^7.4.0"
   }
 }
