--- a/package.json
+++ b/package.json
@@ -18,22 +18,27 @@
   "dependencies": {
     "@koa/cors": "^2.2.3",
     "bcryptjs": "^2.4.3",
+    "connect": "^3.7.0",
+    "connect-history-api-fallback": "^1.6.0",
     "dotenv": "^6.2.0",
     "jsonwebtoken": "^8.5.0",
     "koa": "^2.6.2",
     "koa-bodyparser": "^4.2.1",
+    "koa-compose": "^4.1.0",
     "koa-helmet": "^4.0.0",
     "koa-logger": "^3.2.0",
     "koa-mongoose": "^2.0.0",
     "koa-respond": "^2.1.0",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
-    "mongodb": "^3.2.3",
-    "mongoose": "^5.4.14"
+    "koa2-history-api-fallback": "^0.1.0",
+    "mongodb": "^3.2.6",
+    "mongoose": "^5.5.11",
+    "path-to-regexp": "^3.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.3",
+    "@babel/core": "^7.4.5",
     "@babel/register": "^7.4.0",
-    "nodemon": "^1.19.0"
+    "nodemon": "^1.19.1"
   }
 }
